# Dynamic-Interpreted-Language-supporting-metaprogramming-and-embedding-features

./: .gitignore  AST.h  CMakeLists.txt  CS540.sln  Environment.h  Object.cpp  Object.h  Project.pptx  README.md  hashTable.c  hashTable.h  header.h  makefile  notes.txt  parser.cpp  parser.hpp  parser.output  parser.y  scanner.l  win_flex_bison.rar
CS540/: AST.cpp  AST.h  CS540.vcxproj  CS540.vcxproj.filters  hashTable.cpp  parser.y  scanner.h
include/interpreter/: Interpreter.h
include/utilities/: AST.h  Environment.h  EnvironmentHolder.h  Evaluator.h  EvaluatorActions.h  Exceptions.h  MetaParser.h  MetaUnparser.h  Object.h  Value.h  ValueReference.h
src/: AlphaDI  CMakeLists.txt  main.cpp
src/interpreter/: CMakeLists.txt  Interpreter.cpp
src/parser/: CMakeLists.txt  parser.y  scanner.l  ~m4_in_temp_file_4xPhMq  ~m4_out_temp_file_YVupoH
src/utilities/: AST.cpp  CMakeLists.txt  Environment.cpp  EnvironmentHolder.cpp  Evaluator.cpp  EvaluatorActions.cpp  MetaParser.cpp  MetaUnparser.cpp  Object.cpp  Value.cpp  ValueReference.cpp
test/Alpha/: 22_hercules.asc  23_visitor.asc  24_Tree1.asc
test/AlphaDI/: 01_Named_parameters_simple.asc  02_Error_named_parameter.asc  09_Variables_simple.asc  11_Library_functions.asc  12_Functions'_closures.asc  13_eval.asc
test/AlphaDITests/: 01_Named_parameters_simple.asc  02_Error_named_parameter.asc  03_Error_both_positional_named_value.asc  04_Optional_parameters_simple.asc  05_Overwrite_optional_parameter.asc  06_Overwrite_named_over_optional.asc  07_Error_continue_outside_loop.asc  08_Error_return_outside_function.asc  10_Error_function redefinition.asc
test/MetaTests/: 1_power.asc  3_objectFactor.asc
test/Tests/: 25_Tree2.asc
test/embedding/: CMakeLists.txt  Embedding  embed.cpp
test/metaprogramming/: 1_Power.asc  2_Diagnostics.asc  4_SimpleTest.asc  5_Error_syntax_with_stmt.asc
