add_library(Object STATIC Object.cpp)
add_library(AST STATIC AST.cpp)
add_library(Value STATIC Value.cpp)
add_library(Evaluator STATIC Evaluator.cpp)
add_library(EnvironmentHolder STATIC EnvironmentHolder.cpp)
add_library(EvaluatorActions STATIC EvaluatorActions.cpp)
add_library(ValueReference STATIC ValueReference.cpp)
add_library(MetaUnparser STATIC MetaUnparser.cpp)